# Android-Fitness-Test-Counting

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov11n_pose.param  yolov11s_pose.param
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  yolo11_pose.cpp  yolo11_pose.h  yolo11_pose_ncnn.cpp
app/src/main/java/com/example/facedetect/activity/: PhysicalTestActivity.java  Yolo11PoseNcnn.java
app/src/main/res/drawable/: button_background.xml  button_background_gray.xml  edit_text_background.xml
app/src/main/res/layout/: physicaltest.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
